--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -21,7 +21,6 @@
         android:id="@+id/editText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:background="@drawable/edittext_background"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
@@ -29,16 +28,18 @@
         android:padding="13dp"
         android:text="Name"
         android:textColor="#888887"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_img"
+        app:layout_constraintVertical_bias="0.22000003"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/edittext_background"
         android:drawableLeft="@drawable/account"
         android:drawablePadding="10dp"
@@ -55,7 +56,7 @@
         android:id="@+id/editText3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/edittext_background"
         android:drawableLeft="@drawable/keylog"
         android:drawablePadding="10dp"
@@ -72,7 +73,7 @@
         android:id="@+id/login_btn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:padding="14dp"
         android:text="Sign Up"
         android:textAllCaps="false"
