--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,6 +98,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alice"
@@ -106,10 +107,23 @@
         android:textColor="#076308"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:layout_constraintVertical_bias=".3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearlayout" />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX=".5"
+        android:scaleY=".5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias=".1" />
 
 
 
