--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,5 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.category.CategoryFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
