design of category fragment

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -7,8 +7,18 @@
     tools:context=".ui.category.CategoryFragment">
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Category" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cat_rec"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
