--- a/app/src/main/res/layout/view_all_item.xml
+++ b/app/src/main/res/layout/view_all_item.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/view_img"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:src="@drawable/fruits"
             android:layout_width="150dp"
             android:layout_height="150dp"/>
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/alice"
                 android:text="Name"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/view_description"
