--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -27,7 +27,7 @@
         app:title="Detailed Products"/>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/detailed_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/detailed_img" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/star"
         android:layout_width="75dp"
         android:layout_height="35dp"
         android:layout_marginTop="14dp"
@@ -51,12 +51,13 @@
         app:layout_constraintTop_toBottomOf="@+id/detailed_img" />
 
     <TextView
+        android:id="@+id/detailed_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alice"
         android:text="5.0"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/star"
         app:layout_constraintTop_toBottomOf="@+id/detailed_img"
         android:layout_marginTop="15dp"/>
 
@@ -72,9 +73,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/detailed_price" />
 
     <TextView
+        android:id="@+id/detailed_dec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/description"
@@ -103,7 +105,7 @@
         android:layout_marginStart="10dp"/>
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
@@ -120,7 +122,7 @@
         android:layout_height="38dp"
         android:src="@drawable/remove_circle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/quantity"
         app:layout_constraintTop_toTopOf="@+id/relativeLayout"
         android:layout_marginStart="4dp"/>
 
