--- a/app/src/main/res/layout/fragment_my_carts.xml
+++ b/app/src/main/res/layout/fragment_my_carts.xml
@@ -45,13 +45,13 @@
         >
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/over_total_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/green_500"
             android:fontFamily="@font/alice"
             android:padding="10dp"
-            android:text="Total Price : $300"
+            android:text="Total Price : 0$"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="28sp"
@@ -70,7 +70,7 @@
             app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/over_total_price" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buy_now"
