--- a/app/src/main/res/layout/my_cart_item.xml
+++ b/app/src/main/res/layout/my_cart_item.xml
@@ -152,6 +152,12 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/alice"/>
         </LinearLayout>
+        
+        <ImageView
+            android:id="@+id/delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_delete_24"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
