--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,20 +19,28 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:elevation="3dp"
-            android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:drawableLeft="@drawable/ic_baseline_search_24"
-            android:background="@drawable/search_gb"
-            android:padding="13dp"
-            android:hint="Search Your Item Here ..."
-            android:drawablePadding="5dp"/>
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/search_box"
+                android:elevation="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:drawableLeft="@drawable/ic_baseline_search_24"
+                android:background="@drawable/search_gb"
+                android:padding="13dp"
+                android:hint="Search Your Item Here ..."
+                android:drawablePadding="5dp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/search_rec"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"/>
+
+
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
